--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.705.0",
+    "@aws-sdk/client-lambda": "^3.699.0",
+    "@aws-sdk/lib-dynamodb": "^3.705.0",
     "@clerk/localizations": "^3.7.0",
     "@clerk/nextjs": "6.3.4",
     "@clerk/themes": "^2.1.48",
