--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-clerk-starter",
+  "name": "keezmo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
+    "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
