--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
+    "stripe": "^17.4.0",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
