feat: update configuration and enhance authentication flow
- Modified next.config.js to enable unoptimized image loading.
- Added @clerk/elements dependency in package.json and package-lock.json for improved authentication UI components.
- Updated TypeScript configuration to use 'bundler' for module resolution.
- Refactored middleware to support dynamic public routes for sign-in and sign-up.
- Simplified layout and page components to utilize new Clerk elements for sign-in and sign-up processes.
- Enhanced API route imports to use Clerk's React library for better integration.

These changes improve the user experience during authentication and streamline the project's configuration.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-dynamodb": "^3.705.0",
     "@aws-sdk/client-lambda": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.705.0",
+    "@clerk/elements": "^0.22.2",
     "@clerk/localizations": "^3.7.0",
     "@clerk/nextjs": "6.3.4",
     "@clerk/themes": "^2.1.48",
