--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "6.3.4",
     "@clerk/themes": "^2.1.48",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
