--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "^22.9.0",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.49",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
