feat: add ESLint configuration and update dependencies
- Introduced a new ESLint configuration file (.eslintrc.json) to enforce coding standards and best practices.
- Added ESLint and eslint-config-next as development dependencies to improve code quality and maintainability.
- Removed several unused components (access-check-wrapper, card-study, clerk-logo, footer, learn-more, next-logo, payment-button, quick-actions) to streamline the codebase and enhance performance.
- Updated the theme switcher component to correct import paths, ensuring proper functionality.
- Deleted obsolete card constants to clean up the project structure.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   },
   "devDependencies": {
     "@react-email/components": "^0.0.31",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.2",
     "react-email": "3.0.4"
   }
 }
