--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.705.0",
     "@aws-sdk/client-lambda": "^3.699.0",
+    "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/lib-dynamodb": "^3.705.0",
     "@clerk/elements": "^0.22.2",
     "@clerk/localizations": "^3.7.0",
@@ -21,7 +22,9 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@tanstack/react-table": "^8.20.5",
