chore: update GitHub Actions workflow to use npm instead of PNPM
- Replaced PNPM setup and commands with npm for dependency installation and application build in the development workflow.
- Adjusted caching strategy from 'pnpm' to 'npm' to align with the new package manager usage.
- Streamlined the CI/CD process for better compatibility and performance.

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -17,18 +17,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'pnpm'
-
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Build application
-        run: pnpm build
+        run: npm run build
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
