chore: migrate GitHub Actions workflow from PNPM to npm
- Replaced PNPM setup and commands with npm for dependency installation and application build in the CI/CD workflow.
- Updated caching strategy from 'pnpm' to 'npm' to align with the new package manager usage.
- Streamlined the deployment process to Vercel for improved compatibility and performance.

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -8,19 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "pnpm"
+          cache: "npm"
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
 
       - name: Build
-        run: pnpm build
+        run: npm run build
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
