--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,22 +1,30 @@
-name: Preview
+name: Deploy to Development
+
 on:
-  pull_request:
-    types: [opened, synchronize]
+  push:
+    branches:
+      - development
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "npm"
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build
+      - name: Build application
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
         run: npm run build
 
       - name: Deploy to Vercel
