fix: correct API function path in Vercel configuration
- Updated the path for the PDF generation API function in vercel.json from "/src/app/api/rag-pdf/**/*.ts" to "src/app/api/rag-pdf/**/*.ts".
- This change removes the leading slash, ensuring the correct relative path for deployment of TypeScript files.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "/src/app/api/rag-pdf/**/*.ts": {
+    "src/app/api/rag-pdf/**/*.ts": {
       "maxDuration": 60
     }
   }
