--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-lambda": "^3.699.0",
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/lib-dynamodb": "^3.705.0",
+    "@aws-sdk/s3-request-presigner": "^3.722.0",
     "@clerk/elements": "^0.22.2",
     "@clerk/localizations": "^3.7.0",
     "@clerk/nextjs": "6.3.4",
