--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
@@ -37,6 +38,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "ky": "^1.7.4",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
