--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "emailjs-mime-codec": "^2.0.9",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "ky": "^1.7.4",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@react-email/components": "^0.0.31",
+    "@types/emailjs-mime-codec": "^2.0.2",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
     "react-email": "3.0.4"
