feat: implement client-side study sessions page with filtering and calendar integration
- Introduced a new ClientStudySessionsPage component to manage study session filtering by type, date range, and search text, enhancing user interaction.
- Updated the package dependencies by downgrading date-fns to version 3.6.0 and adding react-day-picker version 8.10.1 for improved date handling.
- Created a Calendar component for date selection, streamlining the user interface for selecting start and end dates.
- Refactored the StudySessionsPage to utilize the new ClientStudySessionsPage, improving code organization and maintainability.
- Overall, these changes enhance the functionality and user experience of the study sessions feature.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "emailjs-mime-codec": "^2.0.9",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
@@ -51,6 +51,7 @@
     "postcss": "^8.4.49",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
