--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "emailjs-mime-codec": "^2.0.9",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^12.0.1",
     "ky": "^1.7.4",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
