--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -64,6 +65,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "resend": "^4.0.1",
     "stripe": "^17.4.0",
     "svix": "^1.44.0",
@@ -75,6 +77,7 @@
   },
   "devDependencies": {
     "@react-email/components": "^0.0.31",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/emailjs-mime-codec": "^2.0.2",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
